gitops/manifests/omniroute/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: omniroute
  namespace: omniroute
  annotations:
    external-dns.alpha.kubernetes.io/target: "3a067db9-77b1-49c9-a3d4-30f86d16c80d.cfargotunnel.com"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`omniroute.jamilshaikh.in`)
      kind: Rule
      services:
        - name: omniroute
          port: 80
